--- a/3/metodologia.tex
+++ b/3/metodologia.tex
@@ -34,11 +34,11 @@ En el presente caso, se pretende desarrollar un modelo de Deep Learning capaz de
 
 La adquisición del conjunto de datos, es decir, imágenes de ultrasonido, consiste en la búsqueda y revisión de las bases de datos sobre imágenes de nódulos tiroideos, donde finalmente se seleccionará y descargará la de mayor utilidad. La base de datos debe cumplir con ciertos requerimientos para realizar un posterior entrenamiento del modelo que otorgue buenos resultados. Las imágenes deben ser debidamente etiquetadas según el carácter del nódulo al que representen, es decir, se debe indicar si cada una de las imágenes pertenece a la categoría benigno o maligno. Además, para evitar discrepancias entre calidad de imágenes en futuras evaluaciones, el conjunto de datos debe poseer imágenes de distintas instituciones de salud y de distintas calidades. Esto permitirá que el modelo entrenado no dependa de la una alta o baja calidad de las imágenes para realizar una correcta predicción. Finalmente, la cantidad de datos debe ser relativamente alta con el fin de aumentar la capacidad de generalización del modelo y evitar posibles sobreajustes o bajo rendimiento.  
 
-En la etapa de preprocesamiento, se realizará en primera instancia una exploración del conjunto de datos con el fin de entender su composición y las características a mejorar; por ejemplo, un posible desbalanceo de clases o presencia de imágenes corruptas o sin etiquetar. Posteriormente, se realizará limpieza datos en caso de imágenes corruptas o de nula utilidad. Además, se usarán técnicas de aumento de datos o weigthing en la situación de desbalanceo de datos, con el fin de evitar una baja generalización y sobreajuste en la clase mayoritaria.  Finalmente, se aplicará escalado en las imágenes destinadas al entrenamiento del modelo con el objetivo de reducir la complejidad computacional y así obtener menor tiempo de ejecución.
+En la etapa de preprocesamiento, se realizará en primera instancia una exploración del conjunto de datos con el fin de entender su composición y las características a mejorar; por ejemplo, un posible desbalanceo de clases o presencia de imágenes corruptas o sin etiquetar. Posteriormente, se realizará limpieza datos en caso de imágenes corruptas o de nula utilidad. Además, se usarán técnicas de Aumento de Datos o weigthing en la situación de desbalanceo de datos, con el fin de evitar una baja generalización y sobreajuste en la clase mayoritaria.  Finalmente, se aplicará escalado en las imágenes destinadas al entrenamiento del modelo con el objetivo de reducir la complejidad computacional y así obtener menor tiempo de ejecución.
 
-Una vez se tenga la data ya preprocesada, este se usará como entrada para los modelos de Deep Learning. Principalmente, se planea usar algunos de los diversos tipos y arquitecturas de redes neuronales convolucionales (CNN), específicamente los más utilizados en este tipo de tareas como lo son VGG, RestNet, Inception y DenseNet, pues son ideales para la extracción de características de las imágenes, facilitando así el proceso final de clasificación. 
+Una vez se tenga la data ya preprocesada, una parte de este se usará para el entrenamiento de modelos de Deep Learning. Inicialmente, se planea usar algunos de los diversos tipos y arquitecturas de Redes Neuronales Convolucionales (CNN), específicamente los más utilizados en este tipo de tareas como lo son VGG, RestNet, Inception y DenseNet, pues son ideales para la extracción de características de las imágenes, facilitando así el proceso final de clasificación. Además, se desarrollarán modelos basados en arquitecturas de Vision Transformer debido al potencial que han demostrado en anteriores investigaciones. Finalmente, también se realizará el desarrollo de modelos híbridos de CNN con Vision Transformer. %similares a los descritos por \cite{pr_JERBI2023autoclassViTGAN}.
 
-Cada uno de los modelos serán probados en parte de la data, específicamente en la data de prueba o test. De aquí se obtendrán las predicciones de los modelos clasificando las imágenes en benigno (0) o maligno (1).
+Cada uno de los modelos será probado en la parte restante de la data, específicamente en la data de prueba o test. De aquí se obtendrán las predicciones de los modelos clasificando las imágenes en benigno (0) o maligno (1).
 
 \section{Metodología para la Medición de Resultados de la Implementación}
 
@@ -114,16 +114,16 @@ Además, se determinó el presupuesto necesario para la elaboración completa de
 		\specialrule{.1em}{.05em}{.05em}
 		{Grupo} & {Item} & {Costo (soles)} & {Subtotal} \\
 		\specialrule{.1em}{.05em}{.05em}
-		\multirow{2}{3cm}{Recursos materiales} & {Laptop} & {S/ 6,500.00} & {} \\
-		{} & {Materiales de escritorio} & {S/ 100.00} & {6,600.00} \\
+		\multirow{2}{4cm}{Recursos materiales} & {Laptop} & {S/ 6,500.00} & {} \\
+		{} & {Materiales de escritorio} & {S/ 100.00} & {S/ 6,600.00} \\
 		\cline{1-4}
-		\multirow{2}{3cm}{Software y trámites} & {Reserva de tema} & {S/ 2,700.00} & {} \\
+		\multirow{2}{4cm}{Software y trámites} & {Reserva de tema} & {S/ 2,700.00} & {} \\
 		{} & {Derecho de inscripción} & {S/ 800.00} & {} \\
 		{} & {Derecho de sustentación} & {S/ 1,500.00} & {} \\
 		{} & {Software} & {S/ 50.00} & {} \\
 		{} & {Renta de servidor en la nube} & {S/ 224.15} & {S/ 5,274.15} \\
 		\cline{1-4}
-		\multirow{2}{3cm}{Extras} & {Consultorías} & {S/ 100.00} & {} \\
+		\multirow{2}{4cm}{Extras} & {Consultorías} & {S/ 100.00} & {} \\
 		{} & {Movilidad} & {S/ 200.00} & {S/ 300.00} \\
 		\specialrule{.1em}{.05em}{.05em} 
 		{} & {Total} & {} & {S/ 12,174.15} \\
