--- a/0/resumen.tex
+++ b/0/resumen.tex
@@ -10,7 +10,7 @@ Con los casos de cáncer de tiroides incrementando cada año en todo el mundo, l
 Por estos motivos, y tomando en cuenta el grado de desarrollo actual del extenso campo de la Inteligencia Artificial y junto con el fácil acceso al gran poder computacional, en la presente investigación se plantea desarrollar un modelo de Deep Learning que sirva como herramienta de soporte en el diagnóstico de nódulos tiroideos para mejorar la eficacia y eficiencia del diagnóstico a través de imágenes de ultrasonido.
 \newline
 
-\textbf{Palabras claves: } Aprendizaje profundo, Redes Neuronales Convolucionales, imágenes, ultrasonido, tiroides, clasificación.
+\textbf{Palabras claves: } Aprendizaje profundo, Redes Neuronales Convolucionales, Vision Transfomers, imágenes, ultrasonido, tiroides, clasificación.
 
 \clearpage
 %\vspace{0.5cm}
@@ -21,4 +21,4 @@ With thyroid cancer cases increasing every year around the world,  specialists a
 For these reasons, and taking into account the current degree of development of the extensive field of Artificial Intelligence and the easy access to great computational power, this research proposes to develop a Deep Learning model that serves as a support tool in the diagnosis of thyroid nodules to improve the effectiveness and efficiency of diagnosis through ultrasound images.
 \newline
 
-\textbf{Keywords: } Deep Learning, Convolutional Neural Networks (CNN), images, ultrasound, thyroid, classification.
+\textbf{Keywords: } Deep Learning, Convolutional Neural Networks, Vision Transfomers, images, ultrasound, thyroid, classification.
