--- a/2/1_antecedentes/antecedentes.tex
+++ b/2/1_antecedentes/antecedentes.tex
@@ -1019,12 +1019,12 @@ El conjunto de datos usado fue el de CIM@LAB de la Universidad Nacional de Colom
 
 Debido a la baja cantidad de muestras del conjunto de datos, se realizó un Aumento de Datos a través del modelo DCGAN, el cual generó 10 000 imágenes, repartidas homogéneamente en cada clase.
 
-Algunas imágenes generadas y originales se muestran a continuación.
+Algunas imágenes generadas se muestran a continuación.
 
 \begin{figure}[H]
 	\begin{center}
-		\includegraphics[width=0.70\textwidth]{2/figures/vitpaper6_part1.png}
-		\caption[Imágenes de ultrasonido de la tiroides (originales y generadas)]{Imágenes de ultrasonido de la tiroides (originales y generadas). \\
+		\includegraphics[width=0.35\textwidth]{2/figures/vitpaper6_part1.png}
+		\caption[Imágenes de ultrasonido de la tiroides generadas]{Imágenes de ultrasonido de la tiroides generadas. \\
 		Fuente: \cite{pr_JERBI2023autoclassViTGAN}. \textit{Automatic classification of ultrasound thyroids images using vision transformers and generative adversarial networks}.}
 		\label{2:fig122}
 	\end{center}
