--- a/2/3_conceptos/marc_conceptual.tex
+++ b/2/3_conceptos/marc_conceptual.tex
@@ -46,6 +46,17 @@ Según \cite{pr_herrera2017diseimp}, la ecografía, que es una técnica de diagn
 
 Los sistema encargados de extraer las imágenes de ultrasonido son compuestos de distintas sensores que generan ondas de sonido para posteriormente analizar la respuesta de la interacción física con el campo de interés. Estas señales recibidas de regreso son digitalizados por una parte electrónica delantera que también transforman estos datos crudos en la imagen final. El funcionamiento de este proceso depende de la configuración de los sensores, el método usado para obtener las imágenes y las características de área de interés. \parencite{pr_camacho2022ultrasonicimg}
 
+Algunas imágenes de ultrasonido de nódulos tiroideos se muestran a continuación.
+
+\begin{figure}[H]
+	\begin{center}
+		\includegraphics[width=0.40\textwidth]{2/figures/imagenes_ultrasonido_originales.png}
+		\caption[Imágenes de ultrasonido de nódulos tiroideos]{Imágenes de ultrasonido de nódulos tiroideos. \\
+		Fuente: \cite{pr_JERBI2023autoclassViTGAN}. \textit{Automatic classification of ultrasound thyroids images using vision transformers and generative adversarial networks}.}
+		\label{2:fig210}
+	\end{center}
+\end{figure}
+
 \subsection{Transfer Learning}
 \cite{bk_geron2022handml} nos menciona que el Transfer Learning o Transferencia de Aprendizaje es un técnica usada en el campo de Deep Learning que permite el uso de algunas capas de un modelo ya definido y entrenado previamente en un nuevo modelo que necesite ser entrenado en una tarea similar al que se desarrolla el modelo original. Las capas destinadas al reuso son normalmente las más cercanas a la entrada o también conocidas como capas inferiores. El beneficio de usar esta técnica radica en dos puntos importantes: cantidad de datos requeridos y velocidad de entrenamiento del modelo; es decir, la cantidad de datos que se deben usar para entrenar un modelo de alto desempeño se reduce considerablemente, mientras que el tiempo requerido para terminar este proceso es menor comparándolo a si lo entrenaran desde cero.
 
@@ -58,7 +69,7 @@ A continuación se presenta de forma gráfica la técnica.
 		\includegraphics[width=0.70\textwidth]{2/figures/transfer_learning.PNG}
 		\caption[Ejemplo de Transfer Learning]{Ejemplo de Transfer Learning. \\
 		Fuente: \cite{bk_geron2022handml}. \textit{Hands-on machine learning with Scikit-Learn, Keras, and TensorFlow}.}
-		\label{2:fig210}
+		\label{2:fig211}
 	\end{center}
 \end{figure}
 
@@ -78,7 +89,7 @@ En la siguiente imagen se muestran algunas transformaciones que se pueden hacer 
 		\includegraphics[width=0.85\textwidth]{2/figures/data_aug.PNG}
 		\caption[Ejemplo de Data Augmentation]{Ejemplo de Data Augmentation. \\
 		Fuente: \cite{bk_geron2022handml}. \textit{Hands-on machine learning with Scikit-Learn, Keras, and TensorFlow}.}
-		\label{2:fig211}
+		\label{2:fig212}
 	\end{center}
 \end{figure}
 
