--- a/3/metodologia.tex
+++ b/3/metodologia.tex
@@ -21,7 +21,7 @@ La muestra consiste en 3493 imágenes de ultrasonido de la glándula de tiroides
 \section{Metodología de Implementación de la Solución}
 La metodología por seguir para implementar un modelo de Deep Learning está basado en gran medida en el conocido ciclo de vida de desarrollo de modelos de Inteligencia Artificial, del cual gran parte de los antecedentes mostrados anteriormente siguen con algunas variaciones. 
 
-En el presente caso, se pretende desarrollar un modelo de Deep Learning capaz de brindar ayuda en el diagnóstico médico; por tal motivo, se optó por basar metodología de esta investigación en la de \cite{pr_monroy2021disvc}, modificándolo en cierta medida en el contexto de nódulos tiroideos e imágenes de ultrasonido. A continuación, se presente de forma gráfica la metodología a seguir.
+En el presente caso, se pretende desarrollar un modelo de Deep Learning capaz de brindar ayuda en el diagnóstico médico; por tal motivo, se optó por basar metodología de esta investigación en la de \cite{pr_monroy2021disvc}, modificándolo en cierta medida en el contexto de nódulos tiroideos e imágenes de ultrasonido. En la Figura \ref{3:fig301} se presenta de forma gráfica la metodología a seguir.
 
 \begin{figure}[H]
 	\begin{center}
@@ -46,7 +46,7 @@ Los resultados obtenidos de la clasificación de los modelos previamente entrena
 
 Antes de presentar las métricas a usar, es necesario conocer a la matriz de confusión y las partes que lo conforman, pues servirá como base para entenderlas. 
 
-Según \cite{ws_izco2018bdcp} la matriz de confusión es una herramienta que permite ver de forma más clara el rendimiento de nuestro modelo.
+Según \cite{ws_izco2018bdcp} la matriz de confusión es una herramienta que permite ver de forma más clara el rendimiento de nuestro modelo. Este se presenta en la Figura \ref{3:fig302}.
 
 \begin{figure}[H]
 	\begin{center}
@@ -90,7 +90,7 @@ precision=\frac{TP}{TP+FP}
 
 \begin{landscape}
 	\section{Cronograma de actividades y presupuesto}
-	Se propuso un cronograma para la investigación. Este conforma desde el inicio hasta ser terminada con la sustentación final planeada para mediados del año 2024.
+	Se propuso un cronograma para la investigación. Conforma desde el inicio hasta ser terminada con la sustentación final planeada para mediados del año 2024. Este se presneta en la Figura \ref{3:fig303}.
 
 	\begin{figure}[!ht]
 		\begin{center}
@@ -103,7 +103,7 @@ precision=\frac{TP}{TP+FP}
 	
 \end{landscape}
 
-Además, se determinó el presupuesto necesario para la elaboración completa de la investigación.
+Además, se determinó el presupuesto necesario para la elaboración completa de la investigación. Este se presenta en la Tabla \ref{3:table1}.
 
 \begin{table}[H]
 	\caption[Presupuesto]{Presupuesto.}
