--- a/2/1_antecedentes/antecedentes.tex
+++ b/2/1_antecedentes/antecedentes.tex
@@ -52,7 +52,7 @@ El modelo construido en esta investigación se basó en MSL (Multi Stage Learnin
 
 Los resultados fueron extraídos de 3 modelos CIsNet, MS-MTL y MS-MTL con intra e inter task consistency. La medida AUC obtenida para cada modelo es 0.9277, 0.9523 y 0.9608, respectivamente. Además, se determinó que el intra task cosistency y el MSL aumenta el desempeño de la segmentación. El caso de inter task consistency con MTL mejora el desempeño de las tareas de clasificación y segmentación. Con la combinación de ambas tareas de consistencias también se demuestra su efectividad.
 
-El método usado en esta investigación se muestra a continuación.
+El método usado en esta investigación se muestra en la Figura \ref{2:fig101}.
 
 \begin{figure}[H]
 	\begin{center}
@@ -66,7 +66,7 @@ El método usado en esta investigación se muestra a continuación.
 
 \cite{pr_sun2023classthynvit} presenta el problema de clasificar nódulos tiroideos nivel 3 debido a pocas características representativas que diferencien a los nódulos benignos de nivel 3 con los nódulos malignos, esto conlleva a obtener bajas precisiones en el pre-diagnóstico. Ante esto, en el artículo se presenta un modelo clasificador de nódulos tiroideos con ViT (Vision-Transformer-based) y el contrast learning. Estas técnicas ayudaron a minimizar la distancia de características en nódulos de una misma clase, lo cual mejora la capacidad predictiva del modelo. Finalmente, en la fase de testeo del modelo se logró un accuracy de 0.869, mientras que las demás métricas indican la superioridad frente a otros modelos clásicos de Deep Learning que también son usados para clasificar.
 
-En la siguien figura se presenta la arquitectura de Vison Transformer desarrollada.
+En la Figura \ref{2:fig102} se presenta la arquitectura de Vison Transformer desarrollada.
 
 \begin{figure}[H]
 	\begin{center}
@@ -94,7 +94,7 @@ La metodología consistía en la construcción de tres redes distintas: feature 
 
 En general, la metodología consistía en, primero, la construcción del conjunto de datos que se conforma de imágenes de ultrasonido procedentes de un hospital. Se recolectaron cerca de 7 800 imágenes de 1 046 exámenes de entre los años 2015 y 2018. En segundos lugar, se realizó el etiquetado de los datos. Estas anotaciones se realizaron de acuerdo con los exámenes en general, y no a cada una de las imágenes que la conforman. Luego, se realizó la separación de la data en entrenamiento, prueba y validación. En la parte final de experimentación, se realizó un preprocesamiento con Data Augmentation y se definió 100 épocas para la fase de entrenamiento. El modelo ganador de la fase de validación fue probado con la data de prueba. Las métricas usadas para la evaluación fueron el accuracy, sensitivity (true positive rate) y el área bajo la curva (AUC ROC).
 
-La siguiente figura muestra la arquitectura propuesta en esta investigación.
+La Figura \ref{2:fig103} muestra la arquitectura propuesta en esta investigación.
 
 \begin{figure}[H]
 	\begin{center}
@@ -126,7 +126,7 @@ La metodología seguida por los autores inicia con la preparación de los datos.
 
 Además, se aplicó a las imágenes una limpieza, eliminando los duplicados. También pasó por un proceso de balanceo de las clases donde se intentó igualar la cantidad de imágenes en cada una de estas. Se realizó el proceso de Aumento de Datos a través de modificaciones en las imágenes como alterar la saturación de forma aleatoria, cambiar el contraste y el brillo. Finalmente, se definió los porcentajes de división para el conjunto de datos, siendo 85\% para el entrenamiento y 15\% para la prueba. 
 
-Para la evaluación de los modelos se utilizaron las métricas de accuracy, precision, recall (sensitivity), specificity y F1 score. Los resultados de evaluar su capacidad de clasificación de los 4 modelos se muestran a continuación.
+Para la evaluación de los modelos se utilizaron las métricas de accuracy, precision, recall (sensitivity), specificity y F1 score. Los resultados de evaluar su capacidad de clasificación de los 4 modelos se muestran en la Tabla \ref{2:table1}, Tabla \ref{2:table2}, Tabla \ref{2:table3} y Tabla \ref{2:table4}.
 
 \begin{table}[H]
 	\caption[Comparación de resultados de los modelos (precision)]{Comparación de resultados de los modelos (precision).}
@@ -228,7 +228,7 @@ De los resultados, se observó que el modelo ViTfSCD-Large obtuvo el más alto p
 
 Finalmente, se realizó una comparación de los modelos a través de su accuracy. En esta última sección, se comparó con otros modelos del estado de arte desarrollados con el conjunto de datos HAM10000. El primero de estos, implementado en 2020 y denominado Efficient-Net logró un accuracy de 92.6\%. También, en el año 2021, se desarrolló un método semi supervisado para la clasificación de imágenes médicas que obtuvo un accuracy de 92.5\%. 
 
-Para esta comparación final, también se consideraron los resultados originales de los modelos IRv2, IRv2 + SA, ResNet50 y ResNet50 + SA junto con los resultados obtenidos en esta investigación. Además, también se realizaron experimentos con los modelos ViT originales (ViT-Base 16 y ViT-Large 16). Los resultados finales muestran que los modelos ViTfSCD-Base y ViTSCD-Large son superiores a sus versiones originales.
+Para esta comparación final, también se consideraron los resultados originales de los modelos IRv2, IRv2 + SA, ResNet50 y ResNet50 + SA junto con los resultados obtenidos en esta investigación. Además, también se realizaron experimentos con los modelos ViT originales (ViT-Base 16 y ViT-Large 16). Los resultados finales presentados en la Tabla \ref{2:table5} muestran que los modelos ViTfSCD-Base y ViTSCD-Large son superiores a sus versiones originales.
 
 \begin{table}[H]
 	\caption[Comparación de resultados según accuracy con el conjunto de datos HAM10000]{Comparación de resultados según accuracy con el conjunto de datos HAM10000.}
@@ -258,7 +258,7 @@ Para esta comparación final, también se consideraron los resultados originales
 
 También se realizaron experimentos con el conjunto de datos DERMOFIT que consta de imágenes de lesiones clínicas de la piel divididas en 10 clases distintas. Los resultados originales con este conjunto de datos muestran que el modelo ResNet50 tuvo mejor desempeño que el modelo de árbol de decisión y KNN. 
 
-Los nuevos experimentos con este conjunto de datos se llevaron a cabo con los modelos ResNet50, IRv2 y ViTfSCD-Base. Los siguientes resultados muestran el desempeño superior del modelo ViTfSCD frente a los demás.
+Los nuevos experimentos con este conjunto de datos se llevaron a cabo con los modelos ResNet50, IRv2 y ViTfSCD-Base. Los resultados presentados en la Tabla \ref{2:table6} muestran el desempeño superior del modelo ViTfSCD frente a los demás.
 
 \begin{table}[H]
 	\caption[Comparación de resultados según accuracy con el conjunto de datos DERMOFIT]{Comparación de resultados según accuracy con el conjunto de datos DERMOFIT.}
@@ -296,7 +296,7 @@ Otro problema a considerar es la falta de conjuntos de datos para el análisis d
 
 En esta investigación se desarrolló un modelo de Deep Learning basado en los Vision Transformers y el Transfer Learning para la detección de cáncer de mama a través de mamografías. Para lograr esto, primero se abordó el problema de desbalanceo de las dos clases (benigno y maligno) en el conjunto de datos de mamografías, posteriormente, se desarrolló un método de Transfer Learning basado en los Vision Transformer con el objetivo de mejorar las deficiencias de los métodos de Transfer Learning basados en CNN.
 
-El conjunto de datos usado para entrenar y probar el modelo fue el Digital Database for Screening Mammography (DDSM). Este consiste (hasta el último acceso del 12 de septiembre del 2022) de 13 128 imágenes mamográficas de las cuales 5 970 son benignas y 7 158 son malignas. Esto presentaba un claro desbalance con un ratio de 0.65:0.35. Esta distribución entre las clases podría generar errores en la etapa de aprendizaje del modelo, por este motivo, se desarrolló un nuevo método para el balanceo de datos a través de la técnica de Aumento de Datos, específicamente, se aplicó variaciones en la fluctuaciones de color de las imágenes, correción gamma, giro horizontal, sal y pimientas, y afilado o sharpening. El objetivo fue balancear el conjunto de datos para realizar validación cruzada de 5 pliegues, para lograr esto, se dividió al conjunto de datos en 5 partes o pliegues. Para las primeras 4 partes, se colocaron 1 145 imágenes de tumores malignos en cada una, mientras que para el quinto pliegue se tenían  1 146. Además, en los primeros 4 pliegues se tuvieron 955 imágenes de tumores benignos, a la vez que en el quinto pliegue se tuvieron 956. Para el lograr el balanceo de clases, se sometió a  imágenes de tumores benignos al proceso de aumento de imágenes 5 veces, mientras que para al grupo de imágenes de tumores malignos solo se aplicó una vez. Así, finalmente se obtuvo 1 146 imágenes para ambas clases presentes en cada pliegue. Este proceso se muestra en la figura a continuación.
+El conjunto de datos usado para entrenar y probar el modelo fue el Digital Database for Screening Mammography (DDSM). Este consiste (hasta el último acceso del 12 de septiembre del 2022) de 13 128 imágenes mamográficas de las cuales 5 970 son benignas y 7 158 son malignas. Esto presentaba un claro desbalance con un ratio de 0.65:0.35. Esta distribución entre las clases podría generar errores en la etapa de aprendizaje del modelo, por este motivo, se desarrolló un nuevo método para el balanceo de datos a través de la técnica de Aumento de Datos, específicamente, se aplicó variaciones en la fluctuaciones de color de las imágenes, correción gamma, giro horizontal, sal y pimientas, y afilado o sharpening. El objetivo fue balancear el conjunto de datos para realizar validación cruzada de 5 pliegues, para lograr esto, se dividió al conjunto de datos en 5 partes o pliegues. Para las primeras 4 partes, se colocaron 1 145 imágenes de tumores malignos en cada una, mientras que para el quinto pliegue se tenían  1 146. Además, en los primeros 4 pliegues se tuvieron 955 imágenes de tumores benignos, a la vez que en el quinto pliegue se tuvieron 956. Para el lograr el balanceo de clases, se sometió a  imágenes de tumores benignos al proceso de aumento de imágenes 5 veces, mientras que para al grupo de imágenes de tumores malignos solo se aplicó una vez. Así, finalmente se obtuvo 1 146 imágenes para ambas clases presentes en cada pliegue. Este proceso se muestra en la Figura \ref{2:fig108}.
 
 \begin{figure}[H]
 	\begin{center}
@@ -315,7 +315,7 @@ Específicamente, el modelo se encarga de dividir las entradas en pequeñas part
 
 Además del bloque transformer, se tiene una parte de MLP encargada de la tarea de clasificación. Este posee una sola capa oculta y utiliza la función de activación GELU.
 
-En el siguiente gráfico se muestra la estructura del modelo implementado en la investigación.
+En el Figura \ref{2:fig109} se muestra la estructura del modelo implementado en la investigación.
 
 \begin{figure}[H]
 	\begin{center}
@@ -340,7 +340,7 @@ Las métricas usadas para el proceso de evaluación de los modelos fueron el acc
 
 Se evaluó el método propuesto a través de 5 formas distintas: comparación de desempeño de los 3 modelos con Transfer Learning, comparación de los modelos Vision Transformer entrenados desde cero con el conjunto de datos de mamografías, comparación de Transfer Learning de Vision Transformer con los CNN, comparación de costo computacional de cada modelo Vision Transformer y, finalmente, se comparó el desempeño de los métodos desarrollados en esta investigación con otros que usaron el mismo conjunto de datos.
 
-Como se muestra en las siguiente tablas, los 6 modelos Transfer Learning basados en arquitectura de Vision Transformer y entrenados con el conjunto de datos DDSM tuvieron un desempeño uniforme a través de todas la métricas.
+Como se muestra en la Tabla \ref{2:table7}, Tabla \ref{2:table8} y Tabla \ref{2:table9}, los 6 modelos Transfer Learning basados en arquitectura de Vision Transformer y entrenados con el conjunto de datos DDSM tuvieron un desempeño uniforme a través de todas la métricas.
 
 \begin{table}[H]
 	\caption[Resultado de los modelo ViT basados en Transfer Learning en el conjunto de datos DDSM (accuracy, AUC, f1-score)]{Resultado de los modelo ViT basados en Transfer Learning en el conjunto de datos DDSM (accuracy, AUC, f1-score).}
@@ -408,7 +408,7 @@ Como se muestra en las siguiente tablas, los 6 modelos Transfer Learning basados
 	\end{flushleft}
 \end{table}
 
-La siguientes tablas muestran los resultados de los modelos Vision Transformer inplementados desde cero y entrenados con el conjunto de datos DDSM.
+La Tabla \ref{2:table10}, Tabla \ref{2:table11} y Tabla \ref{2:table12} muestran los resultados de los modelos Vision Transformer inplementados desde cero y entrenados con el conjunto de datos DDSM.
 
 \begin{table}[H]
 	\caption[Resultado de los modelo ViT entrenados desde cero en el conjunto de datos DDSM (accuracy, AUC, f1-score)]{Resultado de los modelo ViT entrenados desde cero en el conjunto de datos DDSM (accuracy, AUC, f1-score).}
@@ -478,7 +478,7 @@ La siguientes tablas muestran los resultados de los modelos Vision Transformer i
 
 Se puede observar que el modelo PVT-medium obtuvo un mejor desempeño comparado a los demás modelos. Sin embargo, estos resultados se mantienen muy por debajo de los presentados anteriormente.
 
-Finalmente, también se obtuvieron resultados de los experimentos de Transfer Learning con modelos CNN y el conjunto de datos DDSM. Estos se muestran a continuación.
+Finalmente, también se obtuvieron resultados de los experimentos de Transfer Learning con modelos CNN y el conjunto de datos DDSM. Estos se muestran en la Tabla \ref{2:table13}, Tabla \ref{2:table14} y Tabla \ref{2:table15}.
 
 \begin{table}[H]
 	\caption[Resultado de los modelos CNN basados en Transfer Learning en el conjunto de datos DDSM (accuracy, AUC, f1-score)]{Resultado de los modelos CNN basados en Transfer Learning en el conjunto de datos DDSM (accuracy, AUC, f1-score).}
@@ -577,7 +577,7 @@ MedViT consiste en 3 distintas arquitecturas definidas por su tamaño: MedViT-T,
 
 Las métricas usadas para evaluar las 3 versiones del modelo MedViT fueron el accuracy y la curva ROC. Esta elección fue debido a que el experimento se llevó a cabo en varios conjuntos de datos distintos entre sí. 
 
-De los resultados mostrados a continuación, los modelos MedViT superan, de forma general, en gran medida a los modelos basados en CNN en la misma tarea. Esto lleva a concluir que el modelo demuestra una alta capacidad de generalización en imágenes médicas.
+De los resultados mostrados en la Tabla \ref{2:table16}, Tabla \ref{2:table17}, Tabla \ref{2:table18} y Tabla \ref{2:table19}, los modelos MedViT superan, de forma general, en gran medida a los modelos basados en CNN en la misma tarea. Esto lleva a concluir que el modelo demuestra una alta capacidad de generalización en imágenes médicas.
 
 \begin{table}[H]
 	\caption[Comparación de resultados de los modelos MedViT con los CNN y AutoML (PathMNIST, ChestMNIST y DermaMNIST)]{Comparación de resultados de los modelos MedViT con los CNN y AutoML (PathMNIST, ChestMNIST y DermaMNIST).}
@@ -709,7 +709,7 @@ El conjunto de datos Kvasir consiste de 1 000 imágenes en cada una de las 8 cla
 
 El último conjunto de datos, Kvasir-Capsule dataset consiste de 44 228 imágenes de endoscopía divididas en 13 clases. La cantidad de imágenes varía en cada clase del conjunto de datos, lo cual lo vuelve altamente imbalanceado.
 
-A continuación se resumen las características de los 3 conjuntos de datos.
+En la Tabla \ref{2:table20} se resumen las características de los 3 conjuntos de datos.
 
 
 \begin{table}[H]
@@ -756,7 +756,7 @@ El precision utilizado fue la media ponderada, esto pues es un método que asign
 
 Se realizó la prueba t por pares para comparar los resultados con la métrica MCC del modelo con mejor rendimiento.
 
-Los resultados de los experimentos se muestran a continuación.
+Los resultados de los experimentos se muestran en la Tabla \ref{2:table21}, Tabla \ref{2:table22} y Tabla \ref{2:table23}.
 
 \begin{table}[H]
 	\caption[Resultados con el conjunto de datos Chest X-ray]{Resultados con el conjunto de datos Chest X-ray.}
@@ -879,7 +879,7 @@ El entrenamiento de los modelos 2D fue con la técnica de validación cruzada 5-
 
 Para evaluar el rendimiento de los modelos se usó la matriz de confusión multiclases. También se calculó el Matthew’s Correlation Coefficient (MCC), accuracy, precision, recall, F1-score y AUC para cada modelo.
 
-A continuación se muestran los resultados finales.
+En la Tabla \ref{2:table24}, Tabla \ref{2:table25}, Tabla \ref{2:table26} y Tabla \ref{2:table27} se muestran los resultados finales.
 
 \begin{table}[H]
 	\caption[Resultados de los modelos entrenados con el conjunto de datos 2D (MCC, accuracy y f1-score)]{Resultados de los modelos entrenados con el conjunto de datos 2D (MCC, accuracy y f1-score).}
@@ -1019,7 +1019,7 @@ El conjunto de datos usado fue el de CIM@LAB de la Universidad Nacional de Colom
 
 Debido a la baja cantidad de muestras del conjunto de datos, se realizó un Aumento de Datos a través del modelo DCGAN, el cual generó 10 000 imágenes, repartidas homogéneamente en cada clase.
 
-Algunas imágenes generadas se muestran a continuación.
+Algunas imágenes generadas se muestran en la Figura \ref{2:fig122}.
 
 \begin{figure}[H]
 	\begin{center}
@@ -1052,7 +1052,7 @@ En el caso del modelo híbrido de mayor desempeño, se usó la función de activ
 
 Las métricas usadas para evaluar los modelos entrenados fueron el accuracy, precision, recall y f1-score.
 
-Los resultados se muestran a continuación.
+Los resultados se muestran en la Tabla \ref{2:table28}.
 
 \begin{table}[H]
 	\caption[Comparación de los modelos entrenados]{Comparación de los modelos entrenados.}
