--- a/2/3_conceptos/marc_conceptual.tex
+++ b/2/3_conceptos/marc_conceptual.tex
@@ -45,6 +45,8 @@ En la Figura \ref{2:fig209} se presenta el enfoque tradicional del Machine Learn
 	\end{center}
 \end{figure}
 
+\begin{comment}
+
 \subsection{Ecografía y las imágenes de ultrasonido}
 Según \cite{pr_herrera2017diseimp}, la ecografía, que es una técnica de diagnóstico en donde se usan imágenes generadas por ultrasonido, es comúnmente desarrollado en las áreas de cardiología, ginecología, y otras más relacionadas. La popularidad de esta técnica se basa en la capacidad de las imágenes de alta calidad que se obtienen de este proceso, además de no ser un método invasivo o de radiación como muchos otros de su tipo.
 
@@ -60,6 +62,7 @@ Algunas imágenes de ultrasonido de nódulos tiroideos se muestran en la Figura 
 		\label{2:fig210}
 	\end{center}
 \end{figure}
+
 
 \subsection{Transfer Learning}
 \cite{bk_geron2022handml} nos menciona que el Transfer Learning o Transferencia de Aprendizaje es un técnica usada en el campo de Deep Learning que permite el uso de algunas capas de un modelo ya definido y entrenado previamente en un nuevo modelo que necesite ser entrenado en una tarea similar al que se desarrolla el modelo original. Las capas destinadas al reuso son normalmente las más cercanas a la entrada o también conocidas como capas inferiores. El beneficio de usar esta técnica radica en dos puntos importantes: cantidad de datos requeridos y velocidad de entrenamiento del modelo; es decir, la cantidad de datos que se deben usar para entrenar un modelo de alto desempeño se reduce considerablemente, mientras que el tiempo requerido para terminar este proceso es menor comparándolo a si lo entrenaran desde cero.
@@ -97,3 +100,4 @@ En la Figura \ref{2:fig212} se muestran algunas transformaciones que se pueden h
 	\end{center}
 \end{figure}
 
+\end{comment}
