--- a/3/metodologia.tex
+++ b/3/metodologia.tex
@@ -117,16 +117,17 @@ Además, se determinó el presupuesto necesario para la elaboración completa de
 		\multirow{2}{4cm}{Recursos materiales} & {Laptop} & {S/ 6,500.00} & {} \\
 		{} & {Materiales de escritorio} & {S/ 100.00} & {S/ 6,600.00} \\
 		\cline{1-4}
-		\multirow{2}{4cm}{Software y trámites} & {Reserva de tema} & {S/ 2,700.00} & {} \\
-		{} & {Derecho de inscripción} & {S/ 800.00} & {} \\
-		{} & {Derecho de sustentación} & {S/ 1,500.00} & {} \\
+		\multirow{2}{4cm}{Software y trámites} & {Matrícula de Trabajo de Tesis II} & {S/ 375.00} & {} \\ % & {Reserva de tema} & {S/ 2,700.00} & {} \\
+		{} & {Cuotas de Trabajo de Tesis II} & {S/ 1,044.00} & {} \\
+		%{} & {Derecho de inscripción} & {S/ 800.00} & {} \\
+		%{} & {Derecho de sustentación} & {S/ 1,500.00} & {} \\
 		{} & {Software} & {S/ 50.00} & {} \\
-		{} & {Renta de servidor en la nube} & {S/ 224.15} & {S/ 5,274.15} \\
+		{} & {Renta de servidor en la nube} & {S/ 224.15} & {S/ 1,693.15} \\ % & {S/ 5,274.15} \\
 		\cline{1-4}
 		\multirow{2}{4cm}{Extras} & {Consultorías} & {S/ 100.00} & {} \\
 		{} & {Movilidad} & {S/ 200.00} & {S/ 300.00} \\
 		\specialrule{.1em}{.05em}{.05em} 
-		{} & {Total} & {} & {S/ 12,174.15} \\
+		{} & {Total} & {} & {S/ 8,593.15} \\ % & {S/ 12,174.15} \\
 		\specialrule{.1em}{.05em}{.05em}
 	\end{tabular}
 	\begin{flushleft}	
