--- a/tesis.tex
+++ b/tesis.tex
@@ -9,6 +9,7 @@
 \usepackage{enumitem}
 \usepackage{newclude}
 \usepackage{float}
+\usepackage{comment}
 \usepackage[export]{adjustbox}
 
 \newcolumntype{C}[1]{>{\centering\arraybackslash}p{#1}}
