--- a/biblio/references.bib
+++ b/biblio/references.bib
@@ -15,6 +15,14 @@
 %%%papers
 %%%%%%%%%
 
+@inproceedings{pr_vaswani2017attentionisallneed,
+	title = {Attention is all you need},
+	author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, Łukasz and Polosukhin, Illia},
+	year = {2017},
+	book = {Advances in Neural Information Processing Systems},
+	pages = {5999-6009}
+}
+
 @article{pr_camacho2022ultrasonicimg,
 	title = {Ultrasonic Imaging and Sensors},
 	author = {Camacho, Jorge and Svilainis, Linas and Gomez Alvarez-Arenas, Tomas},
