--- a/biblio/references.bib
+++ b/biblio/references.bib
@@ -354,6 +354,13 @@
 	url = {https://gco.iarc.who.int/today/en/dataviz/maps-heatmap?mode=population&key=crude_rate&types=0&age_start=0&cancers=32&sexes=2}
 }
 
+@misc{ws_inkawhich2024dcganpytorch,
+	author = {Inkawhich, Nathan},
+	title = {DCGAN Tutorial},
+	year = {2024},
+	url = {https://pytorch.org/tutorials/beginner/dcgan_faces_tutorial.html}
+}
+
 %%%papers citas
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
