--- a/tesis.tex
+++ b/tesis.tex
@@ -381,7 +381,7 @@ pdfauthor={autor nombres}]{hyperref}
 \input{1/planteamiento}
 \input{2/marco}
 \input{3/metodologia}
-%\input{4/desarrollo}
+\input{4/desarrollo}
 %\input{5/resultados}
 %\input{6/conclusion}
 % %%Bibliografia
