--- a/tesis.tex
+++ b/tesis.tex
@@ -11,6 +11,10 @@
 \usepackage{float}
 \usepackage{comment}
 \usepackage[export]{adjustbox}
+\usepackage{algorithm}
+\usepackage{algpseudocode}
+
+\floatname{algorithm}{Algoritmo}
 
 \newcolumntype{C}[1]{>{\centering\arraybackslash}p{#1}}
 \newcolumntype{N}{@{}m{0pt}@{}}
@@ -320,6 +324,8 @@ pdfauthor={autor nombres}]{hyperref}
 \renewcommand{\listfigurename}{Índice de Figuras}
 \renewcommand{\tablename}{Tabla}
 \renewcommand{\listtablename}{Índice de Tablas}
+\renewcommand{\listalgorithmname}{Índice de Algoritmos}
+
 %%Permite empezar conteo de paginas de forma personalizada
 \addtocounter{page}{1}
 \pagestyle{normal}
@@ -347,6 +353,8 @@ pdfauthor={autor nombres}]{hyperref}
 \phantomsection
 %\listofequcaptions % print list of equations
 \listofmyequations
+\clearpage
+\listofalgorithms
 \clearpage
 %% Numeros de pagina en arabic (si se desea continuar la numeración)
 %\renewcommand{\thepage}{\arabic{page}}
