new changes in table

--- a/4/desarrollo.tex
+++ b/4/desarrollo.tex
@@ -1593,6 +1593,8 @@ En la Tabla \ref{4:table1} se presentan los resultados de los modelos.
 		{} & {} & \multirow{2}{4cm}{I-NET1K V2} & {FT} & {67.92\%} & {55.51\%} & {58.74\%} \\
 		{} & {} & {} & {TL} & {62.87\%} & {47.03\%} & {51.87\%} \\
 		\specialrule{.1em}{.05em}{.05em}
+		{No} & {Híbrido} & {I-NET1K V1} & {FT} & {67.92\%} & {78.81\%} & {55.86\%} \\
+		\specialrule{.1em}{.05em}{.05em}
 	\end{tabular}
 	\begin{flushleft}	
 		\small Fuente: Elaboración propia.
